@@ -777,16 +777,6 @@ This is recommended when many adjacent links share the same URI
 rewrite settings, or when you cannot guarantee the order of attributes
 (many XSLT processors mix the attribute order, which is allowed).
 
-\subsubsection{Alternative syntax}
-
-If using the \texttt{c:base} / \texttt{c:mode} attributes is not
-viable for you, you may use an alternative syntax, which is less
-consistent, but should work everywhere:
-
-\begin{verbatim*}
-<img src="foo.jpg#{base=widget;mode=proxy;}"/>
-\end{verbatim*}
-
 \subsection{Frames}
 \label{frames}
 
