@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.4.11) unstable; urgency=low
 
   * processor: accept c:mode/c:base attributes in any order
+  * processor: removed alternative (anchor) rewrite syntax
 
  --
 
